Nuevas animaciones, nuevo writing

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
           <div style="height: 290px;">
           <div class="contenedor_btn_pulse">
-            <a href="#sectionServicios" class="btn_pulse">Conocé más</a>          
+            <a href="#sectionServicios" class="btn_pulse">Descubrilos</a>          
           </div>
           <div id="contenedorAnimationChevron" class="contenedor_animationChevron">
             <div class="container_chevron">
@@ -188,9 +188,34 @@
             </div>
           </div>
         </article>
-        <div class="asesorate_container">
+        <article class="caminoDigital_container" id="caminoDigitalContainer">
+          <h2 id="sectionServiciosTitle" class="h2 section_servicios_title wow animate__animated animate__fadeInLeft">
+            ¿TE GUSTARON LOS TRES? ¡ADQUIRÍ EL PACK!
+          </h2>
+          <div id="containerCaminoDigital" class="container_content_caminoDigital wow animate__animated animate__fadeInLeft delay-1">
+            <div id="contenedorImagenCaminoDigital" class="caminoDigital_container_img">
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="caminoDigital_img">      
+            </div>
+            <div id="caminoDigitalContainerSpeach" class="caminoDigital_container_speach">
+              <h3 class=" h3 caminoDigital_title">PACK CAMINO DIGITAL</h3>
+              <p class="caminoDigital_paragraph">
+                Adquirí este pack digital y triplicá ese impulso para destacar en el mercado.
+              </p>
+            </div>
+            <div class="caminoDigital_container_btns">
+              <div class="contenedor_btn_pulse btn_caminoDigital">
+                <a href="#" class="btn_pulse">Más detalles</a>          
+              </div>
+              <div class="contenedor_btn_pulse btn_caminoDigital">
+                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+              </div>
+            </div>
+          </div>
+        </article>
+
+<!--         <div class="asesorate_container">
           <a href="#sectionContacto" class="asesorate_btn">Pack Camino Digital</a>          
-        </div>        
+        </div>  -->       
         <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">MÁS SERVICIOS</h3>
         <article class="carousel_article">
           <div class="swiper mySwiper carousel_container">
@@ -287,7 +312,17 @@
               ¿QUIÉNES SOMOS?
             </h2>
             <p id="nosotrosQuienesSomosParagraph" class="nosotros_quienesSomos_paragraph">
-              Somos <span class="nosotros_quienesSomos_span">IMPULSAR</span>, un equipo interdisciplinario de profesionales que brindan soluciones integrales a aquellos emprendimientos, marcas personales y empresariales que buscan herramientas para destacarse en el mercado.
+              Somos <span class="nosotros_quienesSomos_span">IMPULSAR</span>, un equipo multidisciplinario de profesionales que brindan soluciones a los emprendimientos, marcas personales y empresariales que quieran destacarse en el mercado.
+            </p>
+            <p id="nosotrosQuienesSomosParagraph" class="nosotros_quienesSomos_paragraph">
+              ¿Cómo lo realizamos? Todos nuestros productos tienen un proceso de atención humanizado,  que tiene en cuenta tus necesidades y posibilidades, tu historia, y tus objetivos. 
+              Primero te escuchamos, luego analizamos en qué podemos ayudarte, y por último elaboramos una solución a tu medida para que alcances tus metas.
+            </p>
+            <p id="nosotrosQuienesSomosParagraph" class="nosotros_quienesSomos_paragraph">
+              Contamos con una amplia gama de productos y servicios a tu disposición, para que tengas en un solo lugar las soluciones de cualquiera de tus necesidades.
+            </p>
+            <p id="nosotrosQuienesSomosParagraph" class="nosotros_quienesSomos_paragraph">
+              ¡Tenemos el claro objetivo de impulsar tu marca o emprendimiento y llevarlo al siguiente nivel!
             </p>
           </div>
           <div id="nosotrosValoresTitleContainer" class="nosotros_valores_title_container wow animate__animated animate__fadeInLeft">
@@ -295,7 +330,9 @@
               NUESTRO ADN
             </h3>
             <p class="nosotros_valores_paragraph">
-              Nos constituimos con valores que impregnan y trazan cada una de nuestras propuestas, con las que buscamos impulsarte para el logro de tus metas y objetivos.            </p>
+              <span class="nosotros_quienesSomos_span">IMPULSAR</span>
+              se crea con un conjunto de cualidades que resultan inamovibles y no las negociamos. Todos los integrantes de nuestro equipo, todos nuestros productos, todos nuestros proyectos, se componen de valores que se respetan en cada paso dado.             
+            </p>
           </div>
           <div id="nosotrosValoresContainer" class="nosotros_valores_container wow animate__animated animate__fadeInLeft">
             <div class="adn_container">
@@ -429,7 +466,7 @@
               </div>
               <div id="valoresContent" class="valores_content borderEffects">
                 <span></span><span></span><span></span><span></span>
-                <p>DEDICACIÓN</p>
+                <p>TRABAJO EN EQUIPO</p>
               </div>
               <div id="valoresContent" class="valores_content borderEffects">
                 <span></span><span></span><span></span><span></span>                
@@ -437,7 +474,7 @@
               </div>
               <div id="valoresContent" class="valores_content borderEffects">
                 <span></span><span></span><span></span><span></span>                
-                <p>EFICACIA</p>
+                <p>EMPATÍA</p>
               </div>  
               <div id="valoresContent" class="valores_content borderEffects">
                 <span></span><span></span><span></span><span></span>                
@@ -448,11 +485,25 @@
           <div id="nosotrosMisionContainer" class="nosotros_mision_container wow animate__animated animate__fadeInLeft">
             <h3 class="h3 nosotros_mision_title">NUESTRA MISIÓN</h3>
             <p class="nosotros_mision_paragraph">
-              Mediante la psicología laboral, el diseño gráfico y la programación, buscamos brindar servicios que permitan impulsar a quienes quieran destacar en el mercado.<br>
-              A través del cruce de nuestra puerta multidisciplinaria, el impacto de nuestro equipo logrará religar los valores que acompañarán el crecimiento en potencia de cada uno de tus proyectos.
+              Mediante la psicología laboral, el diseño gráfico y la programación, buscamos brindar servicios que permitan <span class="nosotros_quienesSomos_span">IMPULSAR</span> a quienes quieran destacar en el mercado.
+            </p>
+            <p class="nosotros_mision_paragraph">
+              Queremos acompañar el crecimiento de cada uno de los proyectos que realicemos e <span class="nosotros_quienesSomos_span">IMPULSAR</span> a que alcancen sus metas y objetivos.
+            </p>
+            <p class="nosotros_mision_paragraph">
+              Buscamos generar un impacto positivo en el ecosistema emprendedor, mejorando sus modelos de negocios y su estética visual, brindándoles un conjunto de herramientas para potenciar su alcance,  generando sinergias a través de la comunicación y las alianzas estratégicas.
+            </p>
+            <p class="nosotros_mision_paragraph">
+              Sabemos que el tiempo es oro, por eso generamos alianzas que nos permiten ampliar nuestra gama de productos y servicios a tu disposición, para ofrecer en un solo lugar las soluciones de cualquier necesidad.
+            </p>
+            <p class="nosotros_mision_paragraph">
+              Reducir tiempos, potenciar la calidad de los proyectos y ampliar las herramientas que poseen los emprendimientos y marcas, es nuestro norte. Poderlos impulsar a que lleguen al siguiente nivel y haber sido parte de ese proceso, es nuestra alegría.
+            </p>
+            <p class="nosotros_mision_paragraph">
+              ¿Te contamos un secreto? Tenemos una alianza estratégica que identifica proyectos de interés para otorgarles financiamiento e invertir en ellos
             </p>
             <div id="hashtagContainer" class="nosotros_mision_hashtag_container">
-              <img src="./assets/icons3D/rocket-dynamic-color.png" class="hashtagRocket"></img>
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_EN GRIS-12.png" class="hashtagRocket"></img>
               <h3 class="nosotros_mision_hashtag"> <span>#</span> IMPULSAR</p>
             </div> 
           </div>            
@@ -461,10 +512,14 @@
               ¿POR QUÉ ELEGIRNOS?
             </h2>
             <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
-              Al tener un equipo conectado podrás encontrar las soluciones de manera ágil y eficaz, ya que brindamos todas las soluciones en conjunto y en un solo lugar.<br>
-              Acompañamos a cada uno de los proyectos con un proceso de construcción y evaluación para garantizar la calidad de nuestro servicio.<br>
-              Al elegirnos contarás con un producto final que respeta la identidad de marca e identidad visual de tu emprendimiento. Un servicio personalizado que te impulsa a lograr tus metas.
+              Al tener un equipo multidisciplinario conectado, encontrás las soluciones para tus necesidades y objetivos de manera ágil y eficaz en un solo lugar.
             </p>  
+            <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
+              Acompañamos a cada uno de los proyectos a alcanzar el siguiente nivel. Con un proceso de construcción y evaluación ofrecemos servicios de calidad que permiten IMPULSAR tu marca o emprendimiento hacia sus metas y objetivos.
+            </p>
+            <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
+              Impulsamos las herramientas del mundo tecnológico con el valor agregado de “lo humano”, y te ofrecemos un servicio personalizado que te tiene a VOS como protagonista, basado en tus necesidades, objetivos y metas.
+            </p>
           </div>
           <div class="beneficios_container" id="beneficiosContainer">
             <div id="beneficioContent" class="beneficio_content borderEffects">
@@ -477,11 +532,11 @@
             </div>
             <div id="beneficioContent" class="beneficio_content borderEffects">
               <span></span><span></span><span></span><span></span>                
-              <p>UN MISMO LUGAR</p>
+              <p>SINCRONÍA</p>
             </div>
             <div id="beneficioContent" class="beneficio_content borderEffects">
               <span></span><span></span><span></span><span></span>                
-              <p>TODAS TUS SOLUCIONES</p>
+              <p>SOLUCIONES ÁGILES</p>
             </div>  
             <div id="beneficioContent" class="beneficio_content borderEffects">
               <span></span><span></span><span></span><span></span>                
