--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             </div>
             <div class="contenedor_btns">
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="#" class="btn_pulse">Más detalles</a>          
+                <a href="./pages/marca.html" class="btn_pulse">Más detalles</a>          
               </div>
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+                <a href="https://calendly.com/impulsar-dev/impulso-identidad-de-marca" class="btn_pulse">Agendar un encuentro</a>          
               </div>
             </div>
           </div>
@@ -161,10 +161,10 @@
             </div>  
             <div class="contenedor_btns">
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="#" class="btn_pulse">Más detalles</a>          
+                <a href="./pages/visual.html" class="btn_pulse">Más detalles</a>          
               </div>
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+                <a href="https://calendly.com/impulsar-dev/impulso-de-identidad-visual" class="btn_pulse">Agendar un encuentro</a>          
               </div>
             </div>      
           </div>
@@ -180,10 +180,10 @@
             </div>
             <div class="contenedor_btns">
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="#" class="btn_pulse">Más detalles</a>          
+                <a href="./pages/web.html" class="btn_pulse">Más detalles</a>          
               </div>
               <div class="contenedor_btn_pulse btn_impulsos">
-                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+                <a href="https://calendly.com/impulsar-dev/impulso-web" class="btn_pulse">Agendar un encuentro</a>          
               </div>
             </div>
           </div>
@@ -212,7 +212,6 @@
             </div>
           </div>
         </article>
-
 <!--         <div class="asesorate_container">
           <a href="#sectionContacto" class="asesorate_btn">Pack Camino Digital</a>          
         </div>  -->       
@@ -228,7 +227,7 @@
                           <p class="card_paragraph">
                             ¡Hace que te vean! Las redes sociales son la vía de contacto más utilizada, por lo que es importante hacer un buen uso de ellas. ¡Entérate cómo!                           </p>
                           <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
+                              <a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank" class="btn_card">Consultar</a>          
                           </div>
                       </div>
                   </div>
@@ -241,7 +240,7 @@
                             ¿Sabías que podes proteger tu emprendimiento? Realizamos registros de dominios, patentes y marcas. Asesórate para aprovechar lo legal a tu favor.
                           </p>
                           <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
+                              <a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank" class="btn_card">Consultar</a>          
                           </div>
                       </div>
                   </div>
@@ -254,7 +253,7 @@
                             La tecnología nos brinda muchas herramientas. Entérate cómo las diferentes plataformas de Google, Instagram, Facebook, YouTube y Twitter pueden beneficiarte.
                           </p>
                           <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
+                              <a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank" class="btn_card">Consultar</a>          
                           </div>
                       </div>
                   </div>
@@ -267,7 +266,7 @@
                             El universo gráfico de tu marca de la mano de folletería, papelería, merchandising, publicidad, manual de estilos y mucho más. Elegí impreso y/o digital.
                           </p>
                           <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
+                              <a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank" class="btn_card">Consultar</a>          
                           </div>
                       </div>
                   </div>
@@ -280,7 +279,7 @@
                             Fotografía profesional para impulsar tu web, redes sociales y marketing.
                           </p>
                           <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
+                              <a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank" class="btn_card">Consultar</a>          
                           </div>
                       </div>
                   </div>
