--- a/pages/marca.html
+++ b/pages/marca.html
@@ -100,14 +100,14 @@
                 <h1 class="h1 masServicios_title">
                     IMPULSO DE IDENTIDAD DE MARCA
                 </h1>
-                <p class="masServicios_intro_paragraph">
-                    Desarrollá la base sólida de tu marca y dale ese impulso para destacar en el mercado.
+                <p class="h5 masServicios_intro_paragraph">
+                    DESARROLLÁ LA BASE SÓLIDA DE TU MARCA Y DALE ESE IMPULSO PARA DESTACAR EN EL MERCADO.
                 </p>
             </article>
             <article class="masServiciosa_speach">
-                <h2 class="h2 masServicios_title">
+<!--                 <h2 class="h2 masServicios_title">
                     MÁS DETALLES
-                </h2>
+                </h2> -->
                 <p class="masServicios_speach_paragraph">
                     Sabemos que los comienzos son difíciles, por eso hemos diseñado este servicio para vos.
                 </p>
@@ -127,10 +127,49 @@
                     De la mano de Impulsar aprenderás a posicionar tu marca y así diferenciarte de la competencia, también a conocer a tu audiencia para crear contenidos que generen un beneficio positivo y finalmente definirás la estrategia y bases de tu marca hasta su identidad visual.
                 </p>
             </article>
+            <article class="masServicios_calendly">
+                <h3 class="h3 masServicios_title">
+                    AGENDAR UN ENCUENTRO
+                </h3>
+            <!-- Principio del widget integrado de Calendly -->
+            <div class="calendly-inline-widget container_calendly" data-url="https://calendly.com/impulsar-dev/impulso-identidad-de-marca" style="min-width:320px;height:630px;"></div>
+            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+            <!-- Final del widget integrado de Calendly -->
+            </article>
+            <article class="masServicios_formulario">
+                <h3 class="h3 masServicios_title">
+                    CONTACTAR
+                </h3>
+                <form action="https://formspree.io/f/xoqrplko" id="contactoFormulario" class="contacto_formulario" method="post" enctype="">
+                    <div id="formularioContenedorDatos" class="formulario_contenedor_datos">
+                        <div class="mb-3 separador-leve contenedor_inputs">
+                            <label for="email" name="_replyto" class="form-label">Email</label>
+                            <input class="section__formulario__contenedor__form-input" type="email" name="mail" placeholder="Ejemplo: contacto@impulsardev.com.ar" id="correo" required><br>
+                        </div>
+                        <div class="mb-3 separador-leve contenedor_inputs">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input class="section__formulario__contenedor__form-input" type="text" name="nombre" placeholder="Escribe tus nombres" required><br>
+                        </div>
+                        <div class="mb-3 separador-leve contenedor_inputs">
+                            <label for="telefono" class="form-label">Teléfono</label>
+                            <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" placeholder="+5492612481549"><br>
+                        </div>
+                        </div>
+                        <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
+                        <h3 class="h3">¡ENVÍANOS TU MENSAJE!</h3>
+                        <div class="mb-3 contenedor_inputs">
+                            <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required></textarea>
+                        </div>
+                        <div id="contenedorBotonFormulario" class="contenedor_btn_formulario">
+                            <button type="submit" class="btn btn_formulario">Enviar mensaje</button>
+                        </div>
+                    </div>
+                </form>
+            </article>            
             <h3 class="h3 masServicios_title">
                 MÁS SERVICIOS
             </h3>  
-            <article class="carousel_article">
+            <article class="carousel_article espaciado">
                 <div class="swiper mySwiper carousel_container">
                     <div class="swiper-wrapper carousel_content">
                         <div id="card" class="swiper-slide card_masServicios">
@@ -217,46 +256,6 @@
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
                 </div>
-            </article>
-            <article class="masServicios_calendly">
-                <h3 class="h3 masServicios_title">
-                    AGENDAR UN ENCUENTRO
-                </h3>
-                <!-- Principio del widget integrado de Calendly -->
-                <div class="calendly-inline-widget container_calendly" data-url="https://calendly.com/impulsar-dev/30min" style="min-width:300px;height:630px;">
-                </div>
-                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-                <!-- Final del widget integrado de Calendly -->
-            </article>
-            <article class="masServicios_formulario">
-                <h3 class="h3 masServicios_title">
-                    CONTACTAR
-                </h3>
-                <form action="https://formspree.io/f/xoqrplko" id="contactoFormulario" class="contacto_formulario" method="post" enctype="">
-                    <div id="formularioContenedorDatos" class="formulario_contenedor_datos">
-                        <div class="mb-3 separador-leve contenedor_inputs">
-                            <label for="email" name="_replyto" class="form-label">Email</label>
-                            <input class="section__formulario__contenedor__form-input" type="email" name="mail" placeholder="Ejemplo: contacto@impulsardev.com.ar" id="correo" required><br>
-                        </div>
-                        <div class="mb-3 separador-leve contenedor_inputs">
-                            <label for="nombre" class="form-label">Nombre</label>
-                            <input class="section__formulario__contenedor__form-input" type="text" name="nombre" placeholder="Escribe tus nombres" required><br>
-                        </div>
-                        <div class="mb-3 separador-leve contenedor_inputs">
-                            <label for="telefono" class="form-label">Teléfono</label>
-                            <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" placeholder="+5492612481549"><br>
-                        </div>
-                        </div>
-                        <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
-                        <h3 class="h3">¡ENVÍANOS TU MENSAJE!</h3>
-                        <div class="mb-3 contenedor_inputs">
-                            <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required></textarea>
-                        </div>
-                        <div id="contenedorBotonFormulario" class="contenedor_btn_formulario">
-                            <button type="submit" class="btn btn_formulario">Enviar mensaje</button>
-                        </div>
-                    </div>
-                </form>
             </article>
         </section>
         <section id="sectionWhatsapp">
