--- a/pages/marca.html
+++ b/pages/marca.html
@@ -57,6 +57,7 @@
     </head>
 <body>
     <header id="index_header" class="header">
+    <div id="particles-js" class="particles"></div>
     <nav id="navbar" class="">
     <div id="contenedor_logo_header" class="contenedor_logo_header">
         <a class="anchord_logo" href="../index.html">
@@ -359,6 +360,9 @@
     <!-- Swipper-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="../js/carouselSwipper.js"></script>
+    <!-- Particles JS-->
+    <script src="./js/particles.min.js"></script>
+    <script src="./js/app.js"></script>
     <!-- Vest-->
     <script src="https://unpkg.com/vest@4/dist/umd/vest.production.js"></script>
     <!-- Script Wow-->
