--- a/pages/marca.html
+++ b/pages/marca.html
@@ -57,43 +57,43 @@
     </head>
 <body>
     <header id="index_header" class="header">
-    <div id="particles-js" class="particles"></div>
-    <nav id="navbar" class="">
-    <div id="contenedor_logo_header" class="contenedor_logo_header">
-        <a class="anchord_logo" href="../index.html">
-        <img class="logo_header" src="../assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
-        </a>
-    </div>
-    <input type="checkbox" id="toggler">
-    <label for="toggler" class="contenedor_burgerMenu">
-        <div id="burgerMenu" class="center">
-        <div id="burgerMenuDiv"></div>
-        </div>
-    </label>
-    <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
-        <ul id="navList" class="list">
-        <li><a id="anchordNav" class="anchord_secciones" href="../index.html#indexMain">Inicio</a></li>
-        <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué ofrecemos?</a></li>
-        <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionNosotros">¿Quiénes somos?</a></li>
-        <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
-        <div class="socialMedia">
-            <!-- Facebook -->
-            <a href="" type="button" class="socialMedia_anchord" target="_blank">
-            <i class="fa fa-facebook"></i>
-            </a>
-            <!-- Instagram -->
-            <a href="https://instagram.com/impulsardev?igshid=YmMyMTA2M2Y=" type="button" class="socialMedia_anchord" target="_blank">
-            <i class="fa fa-brands fa-instagram"></i>
-            </a>
-            </a>
-            <!-- Whatsapp -->
-            <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
-            <i class="fa fa-brands fa-whatsapp"></i>  
-            </a>
-        </div>
-        </ul>
-    </div>
-    </nav>
+        <div id="particles-js" class="particles"></div>
+        <nav id="navbar" class="">
+            <div id="contenedor_logo_header" class="contenedor_logo_header">
+                <a class="anchord_logo" href="../index.html">
+                <img class="logo_header" src="../assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
+                </a>
+            </div>
+            <input type="checkbox" id="toggler">
+            <label for="toggler" class="contenedor_burgerMenu">
+                <div id="burgerMenu" class="center">
+                <div id="burgerMenuDiv"></div>
+                </div>
+            </label>
+            <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
+                <ul id="navList" class="list">
+                <li><a id="anchordNav" class="anchord_secciones" href="../index.html#indexMain">Inicio</a></li>
+                <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué ofrecemos?</a></li>
+                <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionNosotros">¿Quiénes somos?</a></li>
+                <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
+                <div class="socialMedia">
+                    <!-- Facebook -->
+                    <a href="" type="button" class="socialMedia_anchord" target="_blank">
+                    <i class="fa fa-facebook"></i>
+                    </a>
+                    <!-- Instagram -->
+                    <a href="https://instagram.com/impulsardev?igshid=YmMyMTA2M2Y=" type="button" class="socialMedia_anchord" target="_blank">
+                    <i class="fa fa-brands fa-instagram"></i>
+                    </a>
+                    </a>
+                    <!-- Whatsapp -->
+                    <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
+                    <i class="fa fa-brands fa-whatsapp"></i>  
+                    </a>
+                </div>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <section class="masServicios_section_intro">
@@ -361,8 +361,8 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="../js/carouselSwipper.js"></script>
     <!-- Particles JS-->
-    <script src="./js/particles.min.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="../js/particles.min.js"></script>
+    <script src="../js/app.js"></script>
     <!-- Vest-->
     <script src="https://unpkg.com/vest@4/dist/umd/vest.production.js"></script>
     <!-- Script Wow-->
