--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
   <div class="background">
   </div>
   <header id="index_header" class="header">
-    <div id="contenedor_logo_header" class="contenedor_logo_header">
     <nav id="navbar" class="">
+      <div id="particles-js" class="particles"></div>
+      <div id="contenedor_logo_header" class="contenedor_logo_header">
         <a class="anchord_logo" href="index.html">
           <img class="logo_header" src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
         </a>
